:bug: Fix notifications z-index

--- a/resources/sass/components/_c-notification.scss
+++ b/resources/sass/components/_c-notification.scss
@@ -5,6 +5,7 @@
         right: $colGap;
         width: 90%;
         max-width: 540px;
+        z-index: z('notification');
     }
 
     padding: 0;
